--- a/style.css
+++ b/style.css
@@ -1,127 +1,48 @@
 body{
-	background-color: black;
-	color: white;
+	background-color: white;
 	display: grid;
-	border: black 2px solid ;
-
-	grid-template-columns:  1fr 1fr 1fr 1fr;
-	grid-template-rows: 	10% 25% 25% 25%;
+	grid-template-columns: 1fr;
+	grid-template-rows: 100% 100% 100%;
+	height: 1280px;
+	width: 720px;
 }
+
+
+
 h1, h2, h3{
-	color: #9900ff;
-}
-nav{
-	border: black 2px solid;
-	border-radius: 20px;
-	grid-column: 1 / 5;
-	grid-row: 1 / 1;
-}
-a{
-	border: black 2px solid ;
-	text-decoration: none;
-	list-style-type: none;
 	color: white;
-	padding-left: 100px;
-
 }
 a:hover{
 	color: #9900ff;
 }
-li{
-	display: inline-flex;
-	color: white;
-	text-decoration: none;
-	list-style-type: none;
+
+
+
+
+
+header{
+	background-color:lightblue;
+	grid-row: 1 / 1;
+
 }
+
+nav{
+	background-color: pink;
+	height: 100%;
+}
+
+
+
+
+
 content{
-	border: black solid 2px;
-	grid-column: 1 / 5;
-	grid-row: 2 / 3;
-	display: grid;
-	grid-template-columns:  1fr 1fr 1fr;
-	grid-template-rows: 	1fr 1fr 1fr;
-}
-#about{
 	background-color: black;
-	font-family: sans-serif;
-	border: black 2px solid;
-	margin-top: 45%;
-	/*mwidth: 46.5%;*/
-	text-align: center;
-	grid-column: 1 / 8 ;
-	grid-row: 1 / 1;
-}
-#about p{
-	border: black solid 2px;
-	text-align: left;
-	padding-left: 15%;
-	padding-right: 15%;
 }
 
-#teaching{
-	border: black solid 2px;
-	font-family: sans-serif;
-	grid-column: 1 / 4;
-	grid-row: 2 / 2;
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows:1fr 1fr 1fr;
-	grid-gap: 20px;
-}
-.teaching-title{
-	/*border: red solid 2px;*/
-	grid-column: 1 / 3;
-	grid-row: 1 / 1;
-	padding-top: 17%;
-	text-align: center;
-}
 
-#get{
-	grid-column: 1 / 1;
-	grid-row: 2 / 2;
-	text-align: center;
 
-	
-}
-#get p{
-	border: black 2px solid;
-	text-align: center;
-}
 
-#knn{
-	grid-column: 1 / 1;
-	grid-row: 3 / 3;
-	text-align: center;
-}
 
-#knn h3{
-	border: black 2px solid;
-	text-align: center;
-}
-
-#free-lance{
-	border: white 2px solid;
-	grid-row: 3 / 3;
-	text-align: center;
-}
-#translation{
-	border: blacks 2px solid;
-	margin-top: 350px;
-	grid-column: 1 / 4;
-	grid-row: 3 / 6;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows:1fr 1fr 1fr;
-}
-.projects-translation{
-	grid-column: 1 / 4;
-	border: black 2px solid;
-}
-.projects-translation h1{
-	text-align: center;
-}
 footer{
-	grid-column: 1 / 6;
-	grid-row: 4 / 6;
-	font-size: 16px;
+	background-color: lightblue;
 }
