--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 body{
-	background-color: white;
+	background-color: black;
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 100% 100% 100%;
 	height: 1280px;
 	width: 400px;
 }
-
-
 
 h1, h2, h3{
 	color: #9900ff;
