--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body{
-	background-color: black;
+	background-color: white;
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 100% 100% 100%;
 	height: 1280px;
-	width: 400px;
+	width: 720px;
 }
+
+
 
 h1, h2, h3{
 	color: #9900ff;
@@ -29,13 +31,13 @@ a:hover{
 
 
 header{
-	background-color:black;
+	background-color:lightblue;
 	grid-row: 1 / 1;
 
 }
 
 nav{
-	background-color: black;
+	background-color: pink;
 	height: 100%;
 }
 
@@ -44,21 +46,21 @@ nav{
 
 
 content{
-	background-color: black;
+	background-color: white;
 }
 
 #main-content{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr 1fr; 
-	border: black solid 2px;
+	border: red solid 2px;
 	height: 100%;
 }
 
 .teaching{
 	grid-column: 1 / 5;
 	grid-row: 1 / 5 ;
-	border: black solid 2px;
+	border: red solid 2px;
 	text-align: center;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -98,5 +100,5 @@ content{
 
 }
 footer{
-	background-color: black;
+	background-color: lightblue;
 }
