--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-color: white;
+	background-color: black;
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 100% 100% 100%;
@@ -31,13 +31,13 @@ a:hover{
 
 
 header{
-	background-color:lightblue;
+	background-color:black;
 	grid-row: 1 / 1;
 
 }
 
 nav{
-	background-color: pink;
+	background-color: black;
 	height: 100%;
 }
 
@@ -46,21 +46,21 @@ nav{
 
 
 content{
-	background-color: white;
+	background-color: black;
 }
 
 #main-content{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr 1fr; 
-	border: red solid 2px;
+	border: black solid 2px;
 	height: 100%;
 }
 
 .teaching{
 	grid-column: 1 / 5;
 	grid-row: 1 / 5 ;
-	border: red solid 2px;
+	border: black solid 2px;
 	text-align: center;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -100,5 +100,5 @@ content{
 
 }
 footer{
-	background-color: lightblue;
+	background-color: black;
 }
