--- a/style.css
+++ b/style.css
@@ -1,104 +1,97 @@
 body{
-	background-color: black;
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 100% 100% 100%;
-	height: 1280px;
-	width: 350px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: black;
+    max-width: 40rem;
+
 }
 
-
-
-h1, h2, h3{
-	color: #9900ff;
+h1{
+    font-size: 1.5rem;
+    color: #9900ff;
+    padding: 1rem;
+    margin: 1rem;
+    text-align: center;
 }
-a, li{
-	display: inline-flex;
-	color: white;
-	text-decoration: none;
+img{
+    width: 35px;
+    border:rgb(27, 27, 27) 1px solid;
+    border-radius: 10px;
+}
+img:hover{
+    border-color: #9900ff;
+}
+p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1rem;
+    padding: 1rem;
+    margin: 1rem;
+}
+ul, ol, li{
+    font-size:.9rem;
+    list-style: none;
+    padding: 0 .6rem .7rem;
+    margin:0;
+    text-align: left;
+    
 }
 
-li{
-	padding: 10px;
-	margin: 10px;
-}
-a:hover{
-	color: #9900ff;
-}
-
-
-
-
-
-header{
-	background-color:black;
-	grid-row: 1 / 1;
-
+a{
+    text-decoration: none;
+    padding: 1rem;
+    margin: auto;
+    display: inline flex;
+    color: white;
 }
 
 nav{
-	background-color: black;
-	height: 100%;
+    min-height: 5rem;
+    max-width: 40em;
+    text-align: center;
+    background-color: rgb(27, 27, 27);
+    border-radius: 20px;
+}
+nav li{
+    display: inline flex;
+    justify-content: center;
+    padding: 1rem;
+    margin-left: 10px;
+    font-size: large;
+    color:white;
+}
+a:hover{
+    color:#9900ff;
+    background-color: rgb(29, 29, 29);
+    border-radius: 20px;
 }
 
-
-
-
-
+/* Content */
 content{
-	background-color: black;
+    border: 2px black solid;
+    max-width: 40rem;
 }
-
-#main-content{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr 1fr; 
-	border: black solid 2px;
-	height: 100%;
+main{
+    border: 2px black solid;
+    border-radius: 20px;
+    background-color: rgb(22, 22, 22);
+    color: white;
+    text-align: center;
+    padding:.5rem;
+    margin:.5rem;
 }
-
+.about{
+    background-color: rgb(27, 27, 27);
+    border-radius: 20px;
+}
+.about p{
+    
+    text-align: left;
+    margin: 0;
+}
+.translating{
+    background-color: rgb(27, 27, 27);
+    border-radius: 20px;
+}
 .teaching{
-	grid-column: 1 / 5;
-	grid-row: 1 / 5 ;
-	border: black solid 2px;
-	text-align: center;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 1fr 1fr 1fr;
-}
-.teaching h1{
-	padding-left: 75%;
-}
-.teaching-get-it{
-	grid-column: 1 / 3;
-
-}
-
-.teaching-knn{
-	grid-column: 1 / 3;
-}
-
-
-
-
-
-
-
-.Translating{
-	grid-row: 2 / 2 ;	
-}
-
-.pti{
-	grid-row: 3 / 3 ;
-
-}
-
-.cibiogas{
-	grid-row: 4 / 4 ;
-
-
-
-}
-footer{
-	background-color: black;
+    background-color: rgb(27, 27, 27);
+    border-radius: 20px;
 }
