--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a{
 }
 
 nav{
-    min-height: 5rem;
+    max-height: 5rem;
     max-width: 40em;
     text-align: center;
     background-color: rgb(27, 27, 27);
