--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul, ol, li{
 
 a{
     text-decoration: none;
-    padding: 1rem;
+    /*padding: 1rem;*/
     margin: auto;
     display: inline flex;
     color: white;
