--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a{
 }
 
 nav{
-    min-height: 5rem;
+    min-height: 1rem;
     max-width: 40em;
     text-align: center;
     background-color: rgb(27, 27, 27);
@@ -54,8 +54,8 @@ nav{
 nav li{
     display: inline flex;
     justify-content: center;
-   /* padding: 1rem;*/
-    /*margin-left: 10px;*/
+    padding: 1rem;
+    margin-left: 10px;
     font-size: large;
     color:white;
 }
