--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav{
 nav li{
     display: inline flex;
     justify-content: center;
-    padding: 1rem;
+    padding: .5rem;
     margin-left: 10px;
     font-size: large;
     color:white;
