--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav li{
     display: inline flex;
     justify-content: center;
     padding: .5rem;
-    margin-left: 10px;
+  /*  margin-left: 10px;*/
     font-size: large;
     color:white;
 }
