--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1{
     text-align: center;
 }
 img{
-    display: inline flex;
+    display:  flex;
     width: 25px;
     border:rgb(27, 27, 27) 1px solid;
     border-radius: 10px;
