--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ nav{
     border-radius: 20px;
 }
 nav li{
-   /* display: inline flex;
-    justify-content: center;*/
+    display: inline;
+    justify-content: center;
     padding: .5rem;
   /*  margin-left: 10px;*/
     font-size: large;
