--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ h1{
     text-align: center;
 }
 img{
-    display:  flex;
-    width: 25px;
+    display:  inline;
+    width: 35px;
     border:rgb(27, 27, 27) 1px solid;
     border-radius: 10px;
 }
