--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ main{
 }
 .teaching img{
     width: 5rem;
-
-    margin-bottom: 10px;
+    border-radius:0px;
+    margin-bottom: 1rem;
     
 }
