--- a/style.css
+++ b/style.css
@@ -15,12 +15,13 @@ h1{
 img{
     display:  inline;
     width: 35px;
-    border:rgb(27, 27, 27) 1px solid;
-    border-radius: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
 }
 img:hover{
-    border-color: #9900ff;
+    background-color: #292929;
 }
+
 p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1rem;
@@ -48,25 +49,22 @@ nav{
     min-height: 1rem;
     max-width: 40em;
     text-align: center;
-    background-color: rgb(27, 27, 27);
+    background-color: rgb(61, 61, 61);
     border-radius: 20px;
 }
 nav li{
     display: inline;
     justify-content: center;
     padding: .5rem;
-  /*  margin-left: 10px;*/
+    margin-top: 10px;
     font-size: large;
     color:white;
 }
 nav ol{
     text-align: center;
 }
-a:hover{
-    color:#9900ff;
-    background-color: rgb(29, 29, 29);
-    border-radius: 20px;
-}
+
+
 
 /* Content */
 content{
@@ -100,8 +98,8 @@ main{
     border-radius: 20px;
 }
 .teaching img{
-    width: 5rem;
-    border-radius:0px;
-    margin-bottom: 1rem;
+    width: 100px;
+    border:rgb(27, 27, 27) 1px solid;
+    margin-bottom: 10px;
     
 }
