--- a/style.css
+++ b/style.css
@@ -83,12 +83,15 @@ main{
 .about{
     background-color: rgb(27, 27, 27);
     border-radius: 20px;
+   
 }
 .about p{
     
     text-align: left;
     margin: 0;
 }
+
+
 .translating{
     background-color: rgb(27, 27, 27);
     border-radius: 20px;
@@ -100,6 +103,34 @@ main{
 .teaching img{
     width: 100px;
     border:rgb(27, 27, 27) 1px solid;
-    margin-bottom: 10px;
+    margin-bottom: 10px;    
+}
+
+@media screen and (min-width:700px) {
+  
+    body{
+        background-color: #131313;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
+    header{
+        border-color: #131313;
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+    }
+    nav{
+        background-color: #131313;
+        border-color: #131313;
+    }
+    content{
+        border-color: #131313;
+        min-width: 100rem;
+        grid-column: 2 / 5;
+        grid-row: 1 / 5;
+    }
+    main{
+        border-color: #131313;
+    }
     
 }
