--- a/style.css
+++ b/style.css
@@ -89,9 +89,19 @@ main{
     
     text-align: left;
     margin: 0;
+    margin-bottom:1rem;
 }
 
-
+.PTI{
+    background-color: rgb(27, 27, 27);
+    border-radius: 20px;
+}
+.PTI img{
+    background-color: white;
+    border-radius: 5px;
+    border: 2px solid;
+    width: 10rem;
+}
 .translating{
     background-color: rgb(27, 27, 27);
     border-radius: 20px;
@@ -103,10 +113,10 @@ main{
 .teaching img{
     width: 100px;
     border:rgb(27, 27, 27) 1px solid;
-    margin-bottom: 10px;    
+    margin-bottom: 10px;     
 }
 
-@media screen and (min-width:700px) {
+@media screen and (min-width:1080px) {
   
     body{
         background-color: #131313;
@@ -125,12 +135,13 @@ main{
     }
     content{
         border-color: #131313;
-        min-width: 100rem;
+        margin-left:60%;
+        min-width: 50rem;
         grid-column: 2 / 5;
         grid-row: 1 / 5;
     }
     main{
         border-color: #131313;
     }
-    
+
 }
