--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ img{
     margin-top: 10px;
     border-radius: 5px;
 }
-img:hover{
-    background-color: #292929;
-}
+/*img:hover{
+    border-bottom:3px solid #9900ff;
+}*/
 
 p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -36,7 +36,10 @@ ul, ol, li{
     text-align: left;
     
 }
-
+/*Hover effect navbar*/
+nav li:hover{
+    border-bottom:#9900ff 3px solid;
+}
 a{
     text-decoration: none;
     /*padding: 1rem;*/
@@ -116,32 +119,24 @@ main{
     margin-bottom: 10px;     
 }
 
-@media screen and (min-width:1080px) {
-  
+@media screen and (min-width:650px) {
+
+    /*The body needs to have its content justified in the center*/
     body{
-        background-color: #131313;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-    }
-    header{
-        border-color: #131313;
-        grid-column: 1 / 2;
-        grid-row: 1 / 3;
     }
     nav{
-        background-color: #131313;
-        border-color: #131313;
+        background-color: rgb(61, 61, 61);
+        position: absolute;
+        left:35%;
+        width: 50%;
     }
     content{
-        border-color: #131313;
-        margin-left:60%;
-        min-width: 50rem;
-        grid-column: 2 / 5;
-        grid-row: 1 / 5;
+        position: absolute;
+        top:10%;
+        left:35%;
     }
-    main{
-        border-color: #131313;
-    }
+    .about p:hover{
+        color: white;
 
+    }
 }
