--- a/style.css
+++ b/style.css
@@ -126,8 +126,34 @@ main{
     main{
         min-width: 82rem;
     }
+    .teaching{
+        width: 40rem;
+        margin: .5rem;
+        background: #161616;
+    }
+    .teaching h1{
+        background: #1b1b1b;
+        border-radius: 20px;
+    }
+    .get-it{
+     /*   border:2px solid white;*/
+        border-radius: 20px;
+        margin: 10px;
+        background: #1b1b1b;
+    }
+    .KNN{
+        margin: 10px;
+        background: #1b1b1b;
+        border-radius: 20px;
+        margin-bottom: 10px;
+    }
     .interships{
         min-width: 50rem;
     }
-  
+    .translating{
+        width: 40rem;
+    }
+    .PTI{
+        width: 40rem;
+    }
 }
