--- a/style.css
+++ b/style.css
@@ -110,6 +110,13 @@ main{
     font-size:14px;
     
 }
+.about img{
+    width:100px;
+    height: 100px;
+    border-radius: 40px;
+    padding: 0;
+    margin: 0;
+}
 .schedule-app p{
     font-size: 14px;
 
