--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ div img{
 
 p{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     padding: 1rem;
     margin: 1rem;
 }
@@ -112,7 +112,7 @@ main{
 }
 .about p{
     
-    font-size:14px;
+    font-size:16px;
     
 }
 .about img{
@@ -124,7 +124,7 @@ main{
     margin: 0;
 }
 .schedule-app p{
-    font-size: 14px;
+    font-size: 16px;
 
 }
 
@@ -156,13 +156,67 @@ main{
 */
 
 @media screen and (min-width:600px) {
+    
     nav{
-        min-width: 82rem;
+        min-width:194vh;
        
     }
+    content{
+        width: 100vh;
+    }
     main{
-        min-width: 82rem;
+        width: 192vh;
+        height: 170vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-gap:30px
+    }
+    .about{
+        height: 50vh;
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
         
     }
-    
+    .schedule-app{
+        height: 50vh;
+        grid-column: 2 / 5;
+        grid-row: 1 / 2;
+    }
+    .schedule-app img{
+        height: 200px;
+        width: 200px;
+    }
+   
+    .interships{
+        grid-column: 1 / 3;
+        grid-row: 2 / 2;
+        height: 45vh;
+    }
+    .translating{
+        grid-column: 3 / 5;
+        grid-row: 2 / 2;
+        height: 45vh;
+    }
+    .PTI{
+        grid-column: 1 / 5;
+        grid-row: 2 / 2;
+    }
+    .teaching{
+       height: 10vh;
+       grid-column: 1 / 5;
+       grid-row: 3 / 4;
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+       grid-template-rows: 1fr 1fr;
+       grid-gap: 10px;
+    }
+    .teaching h1{
+        margin-left: 90%;
+        font-size: 32px;
+    }
+    .get-it{
+        height: 52vh;
+        grid-column: 1;
+    }
 }
