--- a/style.css
+++ b/style.css
@@ -164,24 +164,29 @@ main{
     content{
         width: 100vh;
     }
+    
+    }
     main{
         width: 192vh;
         height: 160vh;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr;
-        grid-gap:30px
+        grid-gap:30px;
+        word-wrap: break-word;
     }
     .about{
         height: 50vh;
         grid-column: 1 / 2;
         grid-row: 1 / 3;
+        overflow: scroll;
         
     }
     .schedule-app{
         height: 50vh;
         grid-column: 2 / 5;
         grid-row: 1 / 2;
+        overflow: scroll;
     }
     .schedule-app img{
         height: 200px;
@@ -192,15 +197,18 @@ main{
         grid-column: 1 / 2;
         grid-row: 2 / 2;
         height: 50vh;
+        overflow: scroll;
     }
     .translating{
         grid-column: 2 / 5;
         grid-row: 2 / 2;
         height: 50vh;
+        overflow: scroll;
     }
     .PTI{
         grid-column: 1 / 5;
         grid-row: 2 / 2;
+        overflow: scroll;
     }
     .teaching{
        height: 70vh;
@@ -210,14 +218,18 @@ main{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        grid-gap: 10px;
+       overflow: scroll;
     }
     .teaching h1{
         margin-left: 90%;
         font-size: 32px;
+        overflow: scroll;
     }
     .get-it{
         height: 52vh;
+        overflow: scroll;
         grid-column: 1;
+        
     }
     .KNN{
         grid-column: 2 / 5;
