--- a/style.css
+++ b/style.css
@@ -163,30 +163,30 @@ main{
     }
     content{
         width: 100vh;
+        overflow: hidden;
     }
     
     }
     main{
         width: 192vh;
-        height: 160vh;
+       /* height: 160vh;*/
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr;
         grid-gap:30px;
-        word-wrap: break-word;
+        overflow: hidden;
     }
     .about{
-        height: 50vh;
+        
         grid-column: 1 / 2;
-        grid-row: 1 / 3;
-        overflow: scroll;
+        grid-row: 1 / 2;
+        
         
     }
     .schedule-app{
-        height: 50vh;
         grid-column: 2 / 5;
         grid-row: 1 / 2;
-        overflow: scroll;
+        
     }
     .schedule-app img{
         height: 200px;
@@ -196,19 +196,17 @@ main{
     .interships{
         grid-column: 1 / 2;
         grid-row: 2 / 2;
-        height: 50vh;
-        overflow: scroll;
+        
     }
     .translating{
         grid-column: 2 / 5;
         grid-row: 2 / 2;
-        height: 50vh;
-        overflow: scroll;
+        
     }
     .PTI{
         grid-column: 1 / 5;
         grid-row: 2 / 2;
-        overflow: scroll;
+        
     }
     .teaching{
        height: 70vh;
@@ -218,17 +216,17 @@ main{
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        grid-gap: 10px;
-       overflow: scroll;
+      
     }
     .teaching h1{
-        margin-left: 90%;
+        
         font-size: 32px;
-        overflow: scroll;
+        
     }
     .get-it{
-        height: 52vh;
-        overflow: scroll;
-        grid-column: 1;
+       
+        grid-column: 1 / 2;
+        
         
     }
     .KNN{
