--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,58 @@
+* h1{
+    text-align: center;
+    color: #9900ff;
+}
+* p{
+    text-align: justify;
+    color: white;
+}
+* img{
+    width: 150px;
+}
 body{
     outline: solid 2px red;
+    background: black;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 10px;
 }
 #about{
     grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    outline: rgb(32, 83, 32) solid;
 }
 #schedule-app{
-    grid-column: 2 / 5;
+    grid-column: 2 / 2;
+    grid-row: 1 / 1;
+    outline: rgb(32, 83, 32) solid;
+
+
+}
+.PTI{
+    grid-column: 3 / 3;
+    grid-row: 1 / 1 ;
+}
+.get-it{
+    grid-column: 2 / 2;
+    grid-row: 2 / 2;
+    outline: red solid;
+}
+.KNN{
+    grid-column: 3 / 3;
+    grid-row: 2 / 2;
+    outline: red solid;
+}
+nav{
+    grid-column: 1 / 5;
+    grid-row: 4 / 4;
+    outline: red solid;
+    height: 100px;
+}
+nav ol,li{
+    text-align: center;
+    display: inline;
+}
+nav img{
+    width: 80px;
 }
