--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,7 @@ body{
 h1{
     color: #9900ff;
 }
-li,ol{
-    text-align:justify;
-    margin: 5px;
-    padding: 5px;
-    font-size: 19px;
-}
+
 div{
     background: rgb(37, 37, 37);
     border-radius: 30px;
@@ -31,7 +26,11 @@ p{
 #about,#schedule-app,.PTI,.get-it,.KNN{
     text-align: center;
 }
-
+li,ol{
+    text-align:left;
+    font-size: 16px;
+    list-style-type:none;
+}
 nav{
     background: rgb(46, 46, 48);
     border-radius: 30px;
@@ -72,11 +71,12 @@ nav img{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        grid-gap: 10px;
+        grid-gap: 5px;
     }
     #about{
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
+        grid-column: 1 / 1;
+        height: 40vh;
+        grid-row: 1 / 1;
         border-radius: 50px;
     }
     #about img{
@@ -89,15 +89,13 @@ nav img{
     #schedule-app{
         grid-column: 2 / 2;
         grid-row: 1 / 1;
-    
-    
     }
     .PTI{
         grid-column: 3 / 3;
-        grid-row: 1 / 1 ;
+        grid-row: 1 / 1 ;   
     }
     .get-it{
-        grid-column: 2 / 2;
+        grid-column: 2 / 3;
         grid-row: 2 / 2;
     }
     .KNN{
