--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ nav img{
     body{
         background: black;
         display: grid;
+        height: 100vh;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         grid-gap: 5px;
