--- a/styles.css
+++ b/styles.css
@@ -105,17 +105,13 @@ nav img{
     nav{
         grid-column: 1 / 1;
         grid-row: 2 / 2;
-        height: 20vh;
+        height: 55px;
     }
     nav ol,li{
         text-align: center;
-        display: inline-block;
-        margin: 10px 10px 10px 10px;
-        padding: 10px;
-        
+        display: inline;
     }
     nav img{
         width: 50px;
-        margin: 10px 10px 10px 10px;
     }
 }
