--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ nav img{
     }
     #about{
         grid-column: 1 / 1;
-        grid-row: 1 / 1;
+        grid-row: 2 / 2;
         border-radius: 50px;
     }
     #about img{
@@ -90,15 +90,15 @@ nav img{
     }
     #schedule-app{
         grid-column: 2 / 2;
-        grid-row: 1 / 1;
+        grid-row: 2 / 2;
     }
     .PTI{
         grid-column: 3 / 3;
-        grid-row: 1 / 1 ;   
+        grid-row: 2 / 2 ;   
     }
     .get-it{
         grid-column: 2 / 4;
-        grid-row: 2 / 2;
+        grid-row: 3 / 3;
     }
     .KNN{
         grid-column: 4 / 5;
@@ -106,9 +106,11 @@ nav img{
     }
     
     nav{
-        grid-column: 1 / 1;
-        grid-row: 2 / 2;
+        grid-column: 1 / 5;
+        grid-row: 1 / 2;
         height: 55px;
+        padding: 20px;
+        border-radius: 0px;
     }
     nav ol,li{
         text-align: center;
