--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ nav img{
     width: 50px;
 }
 .PTI img{
-    background-color: rgb(211, 203, 203);
+    background-color: white;
     padding: 10px;
     border-radius: 10px;
 }
@@ -97,8 +97,12 @@ nav img{
         grid-row: 2 / 2 ;   
     }
     .get-it{
-        grid-column: 2 / 4;
+        grid-column: 3 / 5;
         grid-row: 3 / 3;
+    }
+    .translating{
+        grid-column: 2 / 2;
+        grid-row: 3 / 3 ;
     }
     .KNN{
         grid-column: 4 / 5;
@@ -107,8 +111,8 @@ nav img{
     
     nav{
         grid-column: 1 / 5;
-        grid-row: 1 / 2;
-        padding: 20px;
+        grid-row: 1 / 1;
+        padding: 10px;
         margin: 0;
     }
     nav ol,li{
