--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,72 @@
 
-body{
+@media  and (min-width:1000px) {
+    
+}    
+    body{
     background: black;
     text-align: center;
     color: white;
-}
-h1{
+    }
+    h1{
     color: #420869;
-}
+    }
 
-div{
+    div{
     background: rgb(12, 12, 12);
     border-radius: 30px;
     padding: 10px;
     margin: 10px 10px 10px 10px;
-}
-p{
+    }
+    p{
     color: white;
     font-size: 19px;
     font-family: Arial, Helvetica, sans-serif;
-}
- img{
+    }
+    img{
     width: 100px;
-}
-#about,#schedule-app,.PTI,.get-it,.KNN{
+    }
+    #about,#schedule-app,.PTI,.get-it,.KNN{
     text-align: center;
-}
-li,ol{
+    }
+    li,ol{
     text-align:left;
     font-size: 16px;
     list-style-type:none;
-}
-nav{
+    }
+    nav{
     background: rgb(12, 12, 12);
     border-radius: 30px;
     padding: 0;
     margin: 0;
-}
-nav ol,li{
+    }
+    nav ol,li{
     text-align: center;
     display: inline;
     margin: 5px 5px 5px 5px;
-}
-nav img{
+    }
+    nav img{
     width: 40px;
     padding: 0;
     margin: 0;
-}
-.PTI img{
+    border-bottom:rgb(12, 12, 12) solid 5px ;
+    }
+    .PTI img{
     background-color: white;
     padding: 10px;
     border-radius: 10px;
-}
-.KNN img{
+    }
+    .KNN img{
     width:100px;
     height:70px;
     margin: 0;
     padding: 0;
-}
-.get-it img{
+    }
+    .get-it img{
     width:100px;
     height:50px;
     margin: 0;
     padding: 0;
-}
+    }
 
 
 
