--- a/styles.css
+++ b/styles.css
@@ -1,96 +1,110 @@
-body{
-    text-align: justify;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    color: white;
-}
-h1{
-    color:yellow;
-}
-h2{
-    text-align: center;
-}
-p{
-    font-size: medium;
-}
-div {
-    margin:6px;
-    padding: 10px;
-    background-color: black;
-}
-#about h1{
-    text-align: center;
-}
-.PTI img{
-        background-color: white;
-        padding: 10px;
-}
+@media screen and (min-width: 720px) {
+    body,html{
+        background-color: #778da9;
+        margin: 0;
+        padding: 0;
+    }
+    section{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    .about-wrapper{
+        background-color: #778da9;
+        display: flex;
+        flex: 1;
+        flex-direction:column;
+        align-items:center;
+    }
+    .about-image{
+        margin-top: 10%;
+        margin-bottom: 10px;
+        background-color: #cfdbd5;
+        padding: 30px;
+        border-radius: 20px;
+        -webkit-box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+        -moz-box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+        box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+
+    }
+    .contact-links{
+        background-color: #cfdbd5;
+        -webkit-box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+        -moz-box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+        box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+        
+    }
     
-#about img{
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 60px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-img{
-    width: 100px;
-    height: auto;
-}
-.get-it img{
-    background-color: black;
-    padding: 5px;
-
-}
-nav{
-    text-align: center;
-}
-nav li{
-    list-style-type:none;
-    display: inline;
-}
-nav img{
-    width: 50px;
-    height: auto;
-}
-
-@media screen and (min-width: 600px) {
-    body{
-        display: grid;
-        grid-template-columns:1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 5px;
-        overflow: scroll;
-        margin-bottom: 0;
-        height:100vh;
+    #job-content{
+        text-align: justify;
+        width: 500px;
+        background-color: black;
+        color: white;
+        padding: 30px;
+        -webkit-box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+        -moz-box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
+        box-shadow: 9px 15px 26px -14px rgba(0,0,0,0.75);
     }
-    #about{
-        margin-top: 40px;
-        grid-column: 1 / 1;
-        grid-row:span;
+    .pti{
+        margin: 0;
+        border-radius: 0;
+        height: 110vh;
+        margin-bottom: 1px;
+        text-align: center;
+        background-color: #5e548e;
+        display: flex;
+        flex: 1;
+        flex-direction:column;
+        align-items:center;
+        
     }
-    .other-jobs{
-        grid-column: 2 / 3;
-        grid-row: span;
+    .pti img{
+        background-color: #5e548e;
     }
-    .school-projects{
-        grid-column: 3 / 4;
-        grid-row: span;
-    }
-    .get-it{
-        margin-top: 80px;
-    }   
-    nav{
-        margin-top:30px;
-        grid-column: 1 / 4;
-        grid-row: auto;
-    }
-    .PTI img{
-        background-color: white;
+    #logo{
+        width: 520px;
         padding: 10px;
+        background-color: transparent;
+        margin-top: 20px;
+        margin-top: 10%;
+        margin-bottom: 10px;
     }
+    .knn{
+        margin: 0;
+        border-radius: 0;
+        height: 100vh;
+        text-align: center;
+        margin-bottom: 1px;
+        background-color: #9f86c0;
+        display: flex;
+        flex: 1;
+        flex-direction:column;
+        align-items:center;
 
+    }
+    .get-wise{
+        margin: 0;
+        border-radius: 0;
+        height: 100vh;
+        text-align: center;
+        margin-bottom: 1px;
+        background-color: #d8f3dc;
+        display: flex;
+        flex: 1;
+        flex-direction:column;
+        align-items:center;
+    }
+    .translation{
+        margin: 0;
+        border-radius: 0;
+        height: 100vh;
+        margin-bottom: 1px;
+        text-align: center;
+        background-color: #d8e2dc;
+        display: flex;
+        flex: 1;
+        flex-direction:column;
+        align-items:center;
+    }
+   
 }
