--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body,html{
     margin: 0;
     padding: 0;
     background-color: #778da9;
-    height: 50vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 p{
     font-size: large;
@@ -120,7 +121,7 @@ section{
     align-items:center;
 }
 .pti{
-         margin: 0;
+        margin: 0;
         border-radius: 0;
         height: 100vh;
         margin-bottom: 1px;
@@ -132,7 +133,7 @@ section{
         align-items:center;
 }
 .get-wise{
-    margin: 0;
+        margin: 0;
         border-radius: 0;
         height: 100vh;
         text-align: center;
