--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@
         
     }
     
-    #job-content{
+    .job-content{
         text-align: justify;
         width: 500px;
         background-color: black;
@@ -61,7 +61,7 @@
     .pti img{
         background-color: #5e548e;
     }
-    #logo{
+    .logo{
         width: 520px;
         padding: 10px;
         background-color: transparent;
@@ -106,5 +106,49 @@
         flex-direction:column;
         align-items:center;
     }
-   
+
+    .job-content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        justify-items: center;
+        row-gap: 20px;
+    }
+
+    .video-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        justify-items: center;
+        row-gap: 5px;
+    }
+
+    .video-container h2{
+        margin: 5px;
+    }
+    .video-container video {
+        display: none;
+    }
+
+    .job-content h2 {
+        cursor: pointer;
+    }
+
+    .video-container.show-videos video {
+        display: block;
+
+    }
+    video{
+        width: 200px;
+        transition: 2s;
+        margin: 5px;
+        border-radius: 5px;
+        outline: #5e548e solid 2px;
+    }
+
+    .video-player h2{
+        padding:5px;
+        margin: 5px;
+        width: 200px;
+    }
+
 }
